# StockInformer

./: .env.example  Cargo.toml
migrations/2022-07-24-205506_create_users/: up.sql
migrations/2022-07-24-210558_create_portfolios/: down.sql  up.sql
migrations/2022-07-24-211345_create_tickers/: up.sql
src/: main.rs  schema.rs
src/infrastructure/: middleware.rs  mod.rs  routes.rs  setup.rs  state.rs
src/models/: authentication.rs  mod.rs  portfolio.rs  ticker.rs  user.rs
